# realax

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
examples/: es.py  es_brax.py  grad.py  qd.py  rl.py
realax/: __init__.py
realax/logging/: __init__.py  log.py
realax/tasks/: __init__.py  _brax.py  _gymnax.py  _kheperax.py  _metaevo.py  gymnax.py  gymnax_wrapper.py  rl_policy.py  utils.py
realax/training/: __init__.py  base.py  es.py  grad.py  log.py  qd.py  utils.py
realax/training/evo/: __init__.py  es.py  ga.py
realax/training/rl/: __init__.py  _ddpg.py  _ppo.py
wandb/: latest-run
wandb/run-20240601_153156-sldm3suc/: run-sldm3suc.wandb
wandb/run-20240601_153156-sldm3suc/files/: config.yaml  wandb-metadata.json
wandb/run-20240601_153442-ae4g7r62/: run-ae4g7r62.wandb
wandb/run-20240601_153442-ae4g7r62/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240601_155321-7ifbn7ol/: run-7ifbn7ol.wandb
wandb/run-20240601_155321-7ifbn7ol/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240601_155735-26van8f1/: run-26van8f1.wandb
wandb/run-20240601_155735-26van8f1/files/: config.yaml  (+2 more)
wandb/run-20240602_115828-evejx1f1/: run-evejx1f1.wandb
wandb/run-20240602_144218-ii53i8uv/: run-ii53i8uv.wandb
wandb/run-20240602_144427-cm3l6rzb/: run-cm3l6rzb.wandb
wandb/run-20240602_144543-x2s73o3c/: run-x2s73o3c.wandb
wandb/run-20240602_144817-d1ych5p6/: run-d1ych5p6.wandb
wandb/run-20240602_144917-fck8n2ta/: run-fck8n2ta.wandb
wandb/run-20240602_145100-mokihgi2/: run-mokihgi2.wandb
(+23 files in other folders)
